<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_single_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/default_avatar"
        android:transitionName="imageTransition"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/user_single_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_single_image"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/user_single_image"
        android:text="@string/hint_display_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:transitionName="nameTransition"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/user_single_online_image"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/user_single_name"
        android:contentDescription="@string/user_single_chat_item_online_status"
        android:src="@drawable/online_icon"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/user_single_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_single_image"
        android:layout_alignStart="@+id/user_single_name"
        android:layout_marginBottom="5dp"
        android:text="@string/user_default_status"
        android:transitionName="statusTransition"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/user_single_message_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/message_time"
        android:textSize="12sp" />

</RelativeLayout>