<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/send_message_layout_height"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/chat_message_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/chat_message_add_btn_margin_end"
        android:layout_marginStart="@dimen/chat_message_add_btn_margin_start"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:contentDescription="@string/add"
        android:src="@drawable/ic_action_add" />

    <EditText
        android:id="@+id/chat_message_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:background="@android:color/white"
        android:hint="@string/enter_message_here"
        android:inputType="text"
        android:paddingStart="@dimen/chat_message_edit_text_padding_start" />

    <ImageButton
        android:id="@+id/chat_message_send_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/chat_message_send_btn_margin_end"
        android:layout_marginStart="@dimen/chat_message_send_btn_margin_start"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:contentDescription="@string/send"
        android:src="@drawable/ic_action_send" />


</LinearLayout>