<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:selectableItemBackground">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_single_image"
        android:layout_width="@dimen/user_single_image"
        android:layout_height="@dimen/user_single_image"
        android:layout_marginBottom="@dimen/user_single_image_margin_bottom"
        android:layout_marginStart="@dimen/user_single_image_margin_start"
        android:layout_marginTop="@dimen/user_single_image_margin_top"
        android:src="@drawable/default_avatar" />

    <TextView
        android:id="@+id/user_single_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_single_image"
        android:layout_marginStart="@dimen/user_single_name_margin_start"
        android:layout_toEndOf="@+id/user_single_image"
        android:text="@string/hint_display_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/user_single_name_textSize" />

    <TextView
        android:id="@+id/user_single_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/user_single_name"
        android:layout_below="@+id/user_single_name"
        android:layout_marginTop="@dimen/user_single_status_margin_top"
        android:text="@string/user_default_status" />

    <ImageView
        android:id="@+id/user_single_online_icon"
        android:layout_width="@dimen/user_single_online_image"
        android:layout_height="@dimen/user_single_online_image"
        android:layout_alignTop="@+id/user_single_name"
        android:layout_marginStart="@dimen/user_single_online_image_margin_start"
        android:layout_toEndOf="@+id/user_single_name"
        android:contentDescription="@string/online_status"
        android:visibility="invisible"
        app:srcCompat="@drawable/online_icon" />

</RelativeLayout>